feat: 添加基础矩阵运算

--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -16,6 +16,8 @@
     "useDefineForClassFields": true,
     "baseUrl": "./",
     "outDir": "bundles/",
+    "jsx": "react-jsx",
+    "jsxImportSource": "@viewfly/core",
     "paths": {
       "@tanbo/matrix": [
         "src/public-api.ts"
