--- a/package.json
+++ b/package.json
@@ -28,21 +28,28 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
     "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@viewfly/core": "^1.0.5",
+    "@viewfly/platform-browser": "^1.0.5",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.12.1",
-    "eslint-loader": "^4.0.2",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^4.2.0",
     "html-webpack-plugin": "^5.6.0",
     "ip": "^2.0.1",
     "jest": "^29.7.0",
-    "rollup": "^4.20.0",
+    "rollup": "^4.24.0",
     "ts-jest": "^29.2.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
-    "webpack": "^5.93.0",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   }
