--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@tanbo/stream": "^1.2.5",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@viewfly/core": "^1.0.5",
+    "@viewfly/devtools": "^1.0.2",
     "@viewfly/platform-browser": "^1.0.5",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
@@ -46,6 +48,9 @@
     "ip": "^2.0.1",
     "jest": "^29.7.0",
     "rollup": "^4.24.0",
+    "sass": "^1.80.4",
+    "sass-loader": "^16.0.2",
+    "style-loader": "^4.0.0",
     "ts-jest": "^29.2.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
