--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tanbo/matrix",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.2",
   "description": "",
   "main": "./bundles/index.js",
   "module": "./bundles/index.esm.js",
